# veekay

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
include/veekay/: graphics.hpp  types.hpp  veekay.hpp
shaders/: shader.frag  shader.vert
source/: graphics.cpp  veekay.cpp
testbed/: CMakeLists.txt  main.cpp
